force-app/main/default/objects/BerechnungsApartment__c/BerechnungsApartment__c.object-meta.xml
<CustomObject>
    <label>Berechnungs-Apartment</label>
    <nameField>
        <label>Berechnungs-Apartment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Berechnungs-Apartments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>