force-app/main/default/objects/BerechnungsApartment__c/fields/AfA__c.field-meta.xml
<CustomField>
    <fullName>AfA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AfA</label>
    <referenceTo>AFA__c</referenceTo>
    <relationshipLabel>Berechnungs-Apartments</relationshipLabel>
    <relationshipName>BerechnungsApartments</relationshipName>
    <type>Lookup</type>
</CustomField>