force-app/main/default/objects/BerechnungsApartment__c/fields/AfAAussenanlagenProJahrInEuro__c.field-meta.xml
<CustomField>
    <fullName>AfAAussenanlagenProJahrInEuro__c</fullName>
    <label>AfA Außenanlagen pro Jahr in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>