force-app/main/default/objects/BerechnungsApartment__c/fields/AfAAussenanlagenProJahrInProzent__c.field-meta.xml
<CustomField>
    <fullName>AfAAussenanlagenProJahrInProzent__c</fullName>
    <label>AfA Außenanlagen pro Jahr in Prozent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>