force-app/main/default/objects/BerechnungsApartment__c/fields/AFAGrundlage__c.field-meta.xml
<CustomField>
    <fullName>AFAGrundlage__c</fullName>
    <formula>SubstanzwertInEuro__c + NebenkostenInEuro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AFA Grundlage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>