force-app/main/default/objects/BerechnungsApartment__c/fields/AfaProJahrInEuro__c.field-meta.xml
<CustomField>
    <fullName>AfaProJahrInEuro__c</fullName>
    <label>AfA pro Jahr in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>