force-app/main/default/objects/BerechnungsApartment__c/fields/AfAProMonatInEuro__c.field-meta.xml
<CustomField>
    <fullName>AfAProMonatInEuro__c</fullName>
    <formula>AfaProJahrInEuro__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AfA pro Monat in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>