force-app/main/default/objects/BerechnungsApartment__c/fields/AfASubstanzProJahrInEuro__c.field-meta.xml
<CustomField>
    <fullName>AfASubstanzProJahrInEuro__c</fullName>
    <label>AfA Substanz pro Jahr in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>