force-app/main/default/objects/BerechnungsApartment__c/fields/AfASubstanzProJahrInProzent__c.field-meta.xml
<CustomField>
    <fullName>AfASubstanzProJahrInProzent__c</fullName>
    <label>AfA Substanz pro Jahr in Prozent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>