force-app/main/default/objects/BerechnungsApartment__c/fields/Apartment__c.field-meta.xml
<CustomField>
    <fullName>Apartment__c</fullName>
    <label>Apartment</label>
    <referenceTo>Appartment__c</referenceTo>
    <relationshipLabel>Berechnungs-Apartments</relationshipLabel>
    <relationshipName>Berechnungs_Apartments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>