force-app/main/default/objects/BerechnungsApartment__c/fields/BankKreditsumme__c.field-meta.xml
<CustomField>
    <fullName>BankKreditsumme__c</fullName>
    <label>Bank Kreditsumme</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>