force-app/main/default/objects/BerechnungsApartment__c/fields/BankTilgungInProzent__c.field-meta.xml
<CustomField>
    <fullName>BankTilgungInProzent__c</fullName>
    <label>Bank Tilgung in Prozent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>