force-app/main/default/objects/BerechnungsApartment__c/fields/BankZinsInProzent__c.field-meta.xml
<CustomField>
    <fullName>BankZinsInProzent__c</fullName>
    <label>Bank Zins in Prozent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>