force-app/main/default/objects/BerechnungsApartment__c/fields/Berechnung__c.field-meta.xml
<CustomField>
    <fullName>Berechnung__c</fullName>
    <label>Berechnung</label>
    <referenceTo>Berechnung__c</referenceTo>
    <relationshipLabel>Berechnungs-Apartments</relationshipLabel>
    <relationshipName>Berechnungs_Apartments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>