force-app/main/default/objects/BerechnungsApartment__c/fields/ErbbauzinsProJahrInEuro__c.field-meta.xml
<CustomField>
    <fullName>ErbbauzinsProJahrInEuro__c</fullName>
    <formula>ErbbauzinsProMonatInEuro__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Erbbauzins pro Jahr in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>