force-app/main/default/objects/BerechnungsApartment__c/fields/Gesamtkosten__c.field-meta.xml
<CustomField>
    <fullName>Gesamtkosten__c</fullName>
    <formula>Listenpreis__c +   PriceAdjustment__c + GrunderwerbsteuerInEuro__c  +  NotarUndGerichtskostenInEuro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gesamtkosten</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>