force-app/main/default/objects/BerechnungsApartment__c/fields/GrunderwerbsteuerInEuro__c.field-meta.xml
<CustomField>
    <fullName>GrunderwerbsteuerInEuro__c</fullName>
    <formula>Listenpreis__c *  GrunderwerbsteuerInPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grunderwerbsteuer in Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>