force-app/main/default/objects/BerechnungsApartment__c/fields/GrunderwerbsteuerInPercent__c.field-meta.xml
<CustomField>
    <fullName>GrunderwerbsteuerInPercent__c</fullName>
    <label>Grunderwerbsteuer in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>