force-app/main/default/objects/BerechnungsApartment__c/fields/InstandhaltungProJahrInEuro__c.field-meta.xml
<CustomField>
    <fullName>InstandhaltungProJahrInEuro__c</fullName>
    <formula>InstandhaltungProMonatInEuro__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instandhaltung pro Jahr in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>