force-app/main/default/objects/BerechnungsApartment__c/fields/KfWKreditsumme__c.field-meta.xml
<CustomField>
    <fullName>KfWKreditsumme__c</fullName>
    <label>KfW Kreditsumme</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>