force-app/main/default/objects/BerechnungsApartment__c/fields/KfWTilgungInProzent__c.field-meta.xml
<CustomField>
    <fullName>KfWTilgungInProzent__c</fullName>
    <label>KfW Tilgung in Prozent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>