force-app/main/default/objects/BerechnungsApartment__c/fields/KfWZinsInProzent__c.field-meta.xml
<CustomField>
    <fullName>KfWZinsInProzent__c</fullName>
    <label>KfW Zins in Prozent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>