force-app/main/default/objects/BerechnungsApartment__c/fields/Listenpreis__c.field-meta.xml
<CustomField>
    <fullName>Listenpreis__c</fullName>
    <label>Listenpreis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>