force-app/main/default/objects/BerechnungsApartment__c/fields/MieteProJahrInEuro__c.field-meta.xml
<CustomField>
    <fullName>MieteProJahrInEuro__c</fullName>
    <formula>MieteProMonatInEuro__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Miete pro Jahr in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>