force-app/main/default/objects/BerechnungsApartment__c/fields/MieteProMonatInEuro__c.field-meta.xml
<CustomField>
    <fullName>MieteProMonatInEuro__c</fullName>
    <label>Miete pro Monat in Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>