force-app/main/default/objects/BerechnungsApartment__c/fields/NebenkostenInEuro__c.field-meta.xml
<CustomField>
    <fullName>NebenkostenInEuro__c</fullName>
    <formula>GrunderwerbsteuerInEuro__c +  NotarUndGerichtskostenInEuro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nebenkosten in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>