force-app/main/default/objects/BerechnungsApartment__c/fields/Nebenkostenzuschuss__c.field-meta.xml
<CustomField>
    <fullName>Nebenkostenzuschuss__c</fullName>
    <label>Nebenkostenzuschuss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>