force-app/main/default/objects/BerechnungsApartment__c/fields/NotarUndGerichtskostenInEuro__c.field-meta.xml
<CustomField>
    <fullName>NotarUndGerichtskostenInEuro__c</fullName>
    <formula>Listenpreis__c *  NotarUndGerichtskostenInPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notar- und Gerichtskosten in Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>