force-app/main/default/objects/BerechnungsApartment__c/fields/PriceAdjustment__c.field-meta.xml
<CustomField>
    <fullName>PriceAdjustment__c</fullName>
    <label>Kaufpreisanpassung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>