force-app/main/default/objects/BerechnungsApartment__c/fields/PurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>PurchasePrice__c</fullName>
    <description>Listenpreis ± Kaufpreisanpassung</description>
    <formula>Listenpreis__c +  PriceAdjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kaufpreis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>