force-app/main/default/objects/BerechnungsApartment__c/fields/SonderAfA__c.field-meta.xml
<CustomField>
    <fullName>SonderAfA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sonder AfA</label>
    <type>Checkbox</type>
</CustomField>