force-app/main/default/objects/BerechnungsApartment__c/fields/SubstanzwertInEuro__c.field-meta.xml
<CustomField>
    <fullName>SubstanzwertInEuro__c</fullName>
    <label>Substanzwert in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>