force-app/main/default/objects/BerechnungsApartment__c/fields/SubstanzwertInProzent__c.field-meta.xml
<CustomField>
    <fullName>SubstanzwertInProzent__c</fullName>
    <formula>SUBSTITUTE(TEXT(ROUND(SubstanzwertInEuro__c / (Apartment__r.Purchase_Price__c+PriceAdjustment__c), 4) * 100), &apos;.&apos;, &apos;,&apos;) +
IF(NOT(CONTAINS(RIGHT(SUBSTITUTE(TEXT(ROUND(SubstanzwertInEuro__c / (Apartment__r.Purchase_Price__c+PriceAdjustment__c), 4) * 100), &apos;.&apos;, &apos;,&apos;), 3), &apos;,&apos;)), &apos;,00&apos;, IF(CONTAINS(RIGHT(SUBSTITUTE(TEXT(ROUND(SubstanzwertInEuro__c / (Apartment__r.Purchase_Price__c+PriceAdjustment__c), 4) * 100), &apos;.&apos;, &apos;,&apos;), 2), &apos;,&apos;), &apos;0&apos;, &apos;&apos;)) + &apos; %&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Substanzwert in Prozent</label>
    <type>Text</type>
</CustomField>