force-app/main/default/objects/BerechnungsApartment__c/fields/TilgungsbeginnJahr__c.field-meta.xml
<CustomField>
    <fullName>TilgungsbeginnJahr__c</fullName>
    <label>Tilgungsbeginn Jahr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>