force-app/main/default/objects/BerechnungsApartment__c/fields/TilgungsbeginnMonat__c.field-meta.xml
<CustomField>
    <fullName>TilgungsbeginnMonat__c</fullName>
    <label>Tilgungsbeginn Monat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>