force-app/main/default/objects/BerechnungsApartment__c/fields/VerwaltungProJahrInEuro__c.field-meta.xml
<CustomField>
    <fullName>VerwaltungProJahrInEuro__c</fullName>
    <formula>VerwaltungProMonatInEuro__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verwaltung pro Jahr in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>