force-app/main/default/objects/BerechnungsApartment__c/fields/WechselAufLineareAfANachJahren__c.field-meta.xml
<CustomField>
    <fullName>WechselAufLineareAfANachJahren__c</fullName>
    <label>Wechsel auf lineare AfA nach Jahren</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>