force-app/main/default/objects/BerechnungsApartment__c/fields/WertAussenanlagenInEuro__c.field-meta.xml
<CustomField>
    <fullName>WertAussenanlagenInEuro__c</fullName>
    <label>Wert Außenanlagen in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>